tests/tests/snapshots/host_syntax_identity__identity_expr__sim-vertical-slice__HandleOrderCreated.snap
---
source: tests/tests/host_syntax_identity.rs
expression: rendered
---
(transaction (expr-stmt (db-insert ProcessedOrders (record-cons ProcessedOrder (id (uuid-new)) (order_id (field-access order id))))))
(return order)
