tests/tests/snapshots/host_syntax_identity__identity_expr__sim-vertical-slice__PlaceOrder.snap
---
source: tests/tests/host_syntax_identity.rs
expression: rendered
---
(transaction (expr-stmt (db-insert Orders order)))
(return order)
