tests/tests/snapshots/host_syntax_identity__identity_expr__sim-vertical-slice__RecordAudit.snap
---
source: tests/tests/host_syntax_identity.rs
expression: rendered
---
(expr-stmt (db-insert AuditEntries (record-cons AuditEntry (id (uuid-new)) (note "order placed"))))
(return order)
